@@ -4,6 +4,7 @@
   - Bugfix ID#9004 unregisterserver operation by name missing
   - Bugfix ID#8993 clts should all be singular
   - Bugfix ID#9007 Context login mappings not validated
+  - Bugfix ID#8994 oxinstaller --master-pass should not be needed if --disableauth is in use
   
 * 2007-08-20 - choeger@open-xchange.com
 
